# Neural-Network-CPP-Library

./: CMakeLists.txt  README.md  SOLID_Principles.md
inc/: CMakeLists.txt  activations.hpp  execptions.hpp  layers.hpp  node.hpp  tests.hpp
inc/core/: layers.hpp  neuralNet.hpp  node.hpp
inc/util/: activations.hpp  execptions.hpp
src/: CMakeLists.txt  main.cpp  nodeTest.cpp
src/Tests/: CMakeLists.txt  layerTest.cpp  nnTests.cpp  nodeTest.cpp  testFunctions.cpp
